Add dir method to GObject props accessor

Remove special case __members__ attribute from the props accessor
objects getattr method. This has been deprecated since Python 2.3 and
removed in Python 3. Replace this with a __dir__ method making use of the
old members list building code. Additionally fix error where the
GObjectClass was being unref'd too many times when using dir(Object.props),
causing a GLib critical.

https://bugzilla.gnome.org/show_bug.cgi?id=705754